<resources>
    <string name="app_name">NUMAD22Sp_SiyuHou</string>
    <string name="about_me">about me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="A">A</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="F">F</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="pressed">preessed: -</string>
    <string name="link_collector">Link Collector</string>
    <string name="button_add">+</string>
    <string name="todo">TODO</string>
    <string name="url_name">url_name</string>
    <string name="url">url</string>
    <string name="title_activity_input">InputActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!--    <string name="save_the_input">Sa</string>-->
    <!--    <string name="Save">Button</string>-->
    <string name="url_name_input">Url Name</string>
    <string name="valid_url">Valid Url</string>
    <string name="save_the_input">Save</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="my_name_is_siyu_hou_nmy_email_address_is_hou_siy_northeastern_edu">My name is Siyu Hou\nmy email address is hou.siy@northeastern.edu</string>
    <string name="LOCATION">Button</string>
    <string name="location">LOCATION</string>
    <string name="get_current_position">get current position</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="location2">Location</string>
    <string name="locator2" />

    <string name="location23" />
    <string name="location_find">LOCATION</string>
    <string name="web_service">WEB SERVICE</string>
    <string name="details">details</string>
    <string name="category">Category</string>
    <string name="search_country_eg_china">Search country (eg: China)</string>
    <string name="choose_one_post_you_want_to_fetch">Choose one post you want to fetch:</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="ping">Ping</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="submit">Submit</string>
    <string name="submit222">Submit</string>
</resources>